--- a/Constants_Sequences_and_Random_Values.ipynb
+++ b/Constants_Sequences_and_Random_Values.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -22,16 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.date(2017, 4, 17)"
+       "datetime.date(2017, 5, 14)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -54,8 +56,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -63,7 +67,7 @@
        "'0.8.0rc0'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,8 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -83,7 +89,7 @@
        "'1.12.1'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -130,8 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -156,8 +164,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -184,8 +194,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -196,7 +208,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "out = tf.ones([2,3])\n",
+    "print (out.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,8 +222,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -219,7 +236,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "_X = np.array([[1,2,3], [4,5,6]])\n",
+    "X = tf.convert_to_tensor(_X)\n",
+    "x = tf.ones_like(X)\n",
+    "print (x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,8 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -243,7 +267,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.fill([3,2],5)\n",
+    "print (x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,8 +281,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -266,7 +295,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.constant([[1, 3, 5], [4, 6, 8]], dtype = tf.float32)\n",
+    "print (x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,8 +309,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -289,7 +323,21 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.constant(4, shape=[2,3])\n",
+    "print (x.eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = tf.constant"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -307,8 +355,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -327,7 +377,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.linspace(5.0, 10.0, 50)\n",
+    "print (x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,8 +391,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -351,7 +406,10 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.range(10, 101, 2)\n",
+    "print(x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -369,20 +427,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.44651982  1.04446733]\n",
-      " [-3.47446632  2.4686904 ]\n",
-      " [ 1.22045743 -3.3476913 ]]\n"
+      "[[-0.59003246 -1.14384615]\n",
+      " [ 0.12230165 -2.33827972]\n",
+      " [ 2.40860152  4.16021729]]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.random_normal([3,2], 0, 2)\n",
+    "print(x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -393,20 +456,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.0132482   1.10570967]\n",
-      " [ 0.21080986  0.21604359]\n",
-      " [ 0.34207392  0.2467791 ]]\n"
+      "[[ 1.08024669  0.54322827]\n",
+      " [ 0.44302219  0.19200934]\n",
+      " [-0.95795691  0.50040364]]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.truncated_normal([3,2])\n",
+    "print(x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -417,21 +485,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.80732584  1.49800301]\n",
-      " [ 0.22903824  0.97828937]\n",
-      " [ 1.18014169  0.43648648]]\n"
+      "[[ 1.48548293  1.98276114]\n",
+      " [ 0.01324224  0.13771868]\n",
+      " [ 0.66008043  1.19465876]]\n"
      ]
     }
    ],
    "source": [
-    "\n"
+    "x = tf.random_uniform([3,2], 0, 2)\n",
+    "print(x.eval())"
    ]
   },
   {
@@ -443,8 +514,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -456,7 +529,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "x = tf.constant([[1, 2], [3, 4], [5, 6]])\n",
+    "x = tf.random_shuffle(x)\n",
+    "print(x.eval())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -467,55 +544,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ -8.05899918e-01   2.72292346e-01   2.16315291e-03]\n",
-      "  [  2.74491131e-01   6.07317924e-01   1.76837713e-01]\n",
-      "  [  1.89213589e-01  -6.06034577e-01   1.14093232e+00]\n",
-      "  [  1.29428029e+00  -6.79318488e-01   1.25192130e+00]\n",
-      "  [ -2.18161201e+00   8.26316059e-01   2.24443465e-01]]\n",
+      "[[[ 0.4011468   0.1380153   0.14562385]\n",
+      "  [ 0.27342752 -0.36831936 -0.05429364]\n",
+      "  [-0.2249362  -0.07106428  0.17690149]\n",
+      "  [-0.07654715  0.20363851  0.28577805]\n",
+      "  [ 1.06467927 -0.97217619  0.09804254]]\n",
       "\n",
-      " [[ -4.31469619e-01   1.74119067e+00   8.67258251e-01]\n",
-      "  [ -1.04736495e+00   6.93329647e-02   2.46455050e+00]\n",
-      "  [  6.71136856e-01   1.38696265e+00   4.60413188e-01]\n",
-      "  [ -5.97481489e-01   1.32574654e+00   3.99490744e-01]\n",
-      "  [  1.16463304e+00  -2.86259800e-01   2.08924357e-02]]\n",
+      " [[-1.60942829  0.80102372 -0.9266066 ]\n",
+      "  [-1.34374475 -0.12085755  0.46271506]\n",
+      "  [ 0.46257555 -0.72497576 -0.66498703]\n",
+      "  [ 0.38711292  0.10435353 -1.07191336]\n",
+      "  [-1.98557055  0.01715446  0.83402079]]\n",
       "\n",
-      " [[  1.16547585e+00   8.66836131e-01  -1.37871552e+00]\n",
-      "  [ -5.92198253e-01   4.10155028e-01   4.00556743e-01]\n",
-      "  [ -1.84391201e+00   6.03951514e-01   1.51700044e+00]\n",
-      "  [ -6.46995664e-01  -1.00076616e+00  -2.53373098e+00]\n",
-      "  [  1.11354995e+00  -4.37033147e-01  -1.22310674e+00]]\n",
+      " [[-0.40633705 -1.13211906 -2.25901079]\n",
+      "  [ 0.08446012 -0.24357936  0.51507246]\n",
+      "  [ 0.05449572  0.54894978  0.12574738]\n",
+      "  [ 0.2263658  -0.484117   -1.01188886]\n",
+      "  [-1.23522687  0.88364393 -1.2092396 ]]\n",
       "\n",
-      " [[ -1.24956787e-01   1.99593633e-01  -2.10244715e-01]\n",
-      "  [ -3.06440592e-01  -2.36029923e-01  -4.63652372e-01]\n",
-      "  [  7.61949897e-01   1.82299927e-01  -5.73334515e-01]\n",
-      "  [ -3.50696027e-01   1.47090709e+00   7.79132247e-01]\n",
-      "  [  3.73292446e-01  -1.17061816e-01  -2.93730199e-01]]\n",
+      " [[ 0.62986857 -0.48443875 -0.32393417]\n",
+      "  [ 0.34706494  0.01690649 -0.10616488]\n",
+      "  [-1.77190781 -0.69710207 -1.41193306]\n",
+      "  [ 0.92126149 -0.76606566  0.75227356]\n",
+      "  [ 0.92588383  0.01852517 -0.53432924]]\n",
       "\n",
-      " [[  1.15475014e-01  -8.85104761e-03   2.70997882e-01]\n",
-      "  [  5.39043248e-01  -1.22421873e+00   5.91688395e-01]\n",
-      "  [  9.84528363e-01   1.02289438e+00   3.06517988e-01]\n",
-      "  [ -8.25244248e-01   1.20455906e-01   2.35888982e+00]\n",
-      "  [ -6.59384608e-01  -3.17072958e-01  -1.63202643e-01]]]\n"
+      " [[ 0.69627517 -1.01199389  0.35712653]\n",
+      "  [ 0.63756472  0.85480094  0.98267466]\n",
+      "  [ 0.43126425 -0.69673651 -0.32745293]\n",
+      "  [-0.51154268  0.16226543 -0.6893236 ]\n",
+      "  [ 0.42541373 -2.61562943 -1.30113697]]]\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "X = tf.random_normal([10, 10, 3])\n",
+    "x = tf.random_crop(X, [5, 5, 3])\n",
+    "print(x.eval())"
+   ]
   }
  ],
  "metadata": {
